@startuml
class Robot {
    - size: robot_size {small, large}
    - process_time: int
    - failure_rate: float
}

interface Sweeper {
    + sweep(location_name)
}

interface Vacuum {
    + vacuum(location_name)
}

interface Mopper {
    + mop(location_name)
}


Robot --> Sweeper
Robot --> Vacuum
Robot --> Mopper
@enduml